--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-maps": "^1.10.1"
+    "react-native-maps": "^1.10.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
